# SearchEngine

./: CMakeLists.txt  CMakePresets.json  README.md
include/: converterJSON.h  exceptions.h  invertedIndex.h  searchServer.h
src/: CMakeLists.txt  config.json  converterJSON.cpp  exceptions.cpp  invertedIndex.cpp  main.cpp  requests.json  searchServer.cpp
testing/: CMakeLists.txt  tests.cc
